--- a/app/views/blogs/_sidebar.html.erb
+++ b/app/views/blogs/_sidebar.html.erb
@@ -7,226 +7,37 @@
   <% end %>
 </div>
 
-<!-- <div class="bd_wrap clearfix">
+<div class="bd_wrap clearfix">
   <div class="tab-menu-wrap">
     <div class="title-tab-menu">
       <h2><span>Top 5</span> Amazon Deals</h2>
     </div>
+
     <div class="tab-menu-wp">
       <ul>
         <li>Promo Codes</li>
         <li>Deals</li>
-        <li>Coupons</li>
+        <li>Sales</li>
       </ul>
       <div class="clear"></div>
       
-      <div class="page1">
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="https://amzn.to/2E6Wte6"><img src="https://m.media-amazon.com/images/I/61n7Ho0i9rL._SR400,400_.jpg" alt="True Wireless Earbuds Bluetooth 5.0 DULLA Sweatproof"></a>
-          </div>
-          <div class="inner">
-            <a href="https://amzn.to/2E6Wte6">
-              <p>True Wireless Earbuds Bluetooth 5.0 DULLA Sweatproof</p>
-              <span>$24.98<em>$36.89</em><span>
-            </a>
-            <address>Code: 30SCQWC9</address>            
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="https://amzn.to/2E361H9"><img src="https://m.media-amazon.com/images/I/71f3jbBwT1L._SR400,400_.jpg" alt="S-ZONE Canvas Travel Toiletry Bag"></a>
-          </div>
-          <div class="inner">
-            <a href="https://amzn.to/2E361H9">
-              <p>S-ZONE Canvas Travel Toiletry Bag</p>
-              <span>$6.49<em>$12.99</em><span>
-            </a>
-            <address>Code: 50ONZXPT</address>            
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="https://amzn.to/2E8MrcD"><img src="https://m.media-amazon.com/images/I/61n7yNis-LL._SR400,400_.jpg" alt="Lovinland Electric Meat Grinder Meat"></a>
-          </div>
-          <div class="inner">
-            <a href="https://amzn.to/2E8MrcD">
-              <p>Lovinland Electric Meat Grinder Meat</p>
-              <span>$49.99<em>$249.99</em><span>
-            </a>
-            <address>Code: 80UP393S</address>            
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><img src="Product_Image" alt=""></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-              <span>$Discount_Price<em>$Original_Price</em><span>
-            </a>
-            <address>Code: Promotion_code</address>            
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><img src="Product_Image" alt=""></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-              <span>$Discount_Price<em>$Original_Price</em><span>
-            </a>
-            <address>Code: Promotion_code</address>            
-          </div>
-        </div>
-        
-        <div class="blog_side_more">
-         <a href="/deals/promo_codes">See More</a>
-        </div>
-
+      <div class="page1"><!-- Codes -->
+        <%= render 'blogs/side_codes' %>
       </div>
 
-        
-
-      <div class="page1">
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><img src="Product_Image" alt=""></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-              <span>$Discount_Price<em>$Original_Price</em><span>
-            </a>
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><img src="Product_Image" alt=""></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-              <span>$Discount_Price<em>$Original_Price</em><span>
-            </a>
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><img src="Product_Image" alt=""></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-              <span>$Discount_Price<em>$Original_Price</em><span>
-            </a>
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><img src="Product_Image" alt=""></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-              <span>$Discount_Price<em>$Original_Price</em><span>
-            </a>
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><img src="Product_Image" alt=""></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-              <span>$Discount_Price<em>$Original_Price</em><span>
-            </a>
-          </div>
-        </div>
-
-        <div class="blog_side_more">
-         <a href="/deals/promo_codes">See More</a>
-        </div>
-
+    
+      <div class="page1"><!-- Deals -->
+        <%= render 'blogs/side_deals' %>
       </div>
+    
 
-      <div class="page1">
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><span>70%<em>OFF</em></span></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-            </a>
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><span>70%<em>OFF</em></span></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-            </a>
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><span>70%<em>OFF</em></span></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-            </a>
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><span>70%<em>OFF</em></span></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-            </a>
-          </div>
-        </div>
-
-        <div class="tab-menu-box clearfix">
-          <div class="tab-menu-img">
-           <a href="Product_Link"><span>70%<em>OFF</em></span></a>
-          </div>
-          <div class="inner">
-            <a href="Product_Link">
-              <p>Product_title</p>
-            </a>
-          </div>
-        </div>
-
-        <div class="blog_side_more">
-         <a href="/deals/promo_codes">See More</a>
-        </div>
+      <div class="page1"><!-- Sales -->
+        <%= render 'blogs/side_sales' %>
       </div>
       
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="bf_wrap clearfix">
   <h2><span>LATEST</span> FEATURED</h2>
