--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -23,8 +23,8 @@
     </a>
   </div>
   <div class="inner">
-    <span class="regular"><em>Coupon</em></span>
-    <h3><a target="_blank" href="https://amzn.to/2GDUFvg">Amazon | Saless & Coupons, May 2019</a></h3>
+    <h3><a target="_blank" href="https://amzn.to/2GDUFvg">
+    <span class="regular"><em>Coupon</em></span>Amazon | Saless & Coupons, May 2019</a></h3>
     <p>These Amazon coupons of the day to save as much as 70% on Grocery, Health & Beauty, Electronics, Home Improvement, and more. Simply click on the category of coupons you want, and clipping coupons.</p>
     <span>Expiration: On going</span>
   </div> 
@@ -73,24 +73,6 @@
 
 <div class="card clearfix" data-tags="Coupons">
   <div class="info_box">
-    <a target="_blank" href="https://amzn.to/2VsrqUS">
-      <p>50%<br /><em>OFF</em></p>
-    </a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>Coupon</em></span>
-    <h3><a target="_blank" href="https://amzn.to/2VsrqUS">Up to 50% off | Electronics Clippable Coupons</a></h3>
-    <p>Get savings of up to 50% off on electronic clippable coupons for all kind of electronics, cellphone&accessories and computers etc...</p>
-    <span>Expiration: On going</span>
-  </div> 
-  <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VsrqUS">Shop Now</a>
-  </div>
-</div>
-
-
-<div class="card clearfix" data-tags="Coupons">
-  <div class="info_box">
     <a target="_blank" href="https://amzn.to/2Log0gl">
       <p><span>50%</span><br /><em>OFF</em></p>
     </a>
@@ -102,7 +84,7 @@
     <span>Expiration: On going</span>
   </div> 
   <div class="deal_btn">
-    <a href="https://amzn.to/2Log0gl">Shop Now</a>
+    <a target="_blank" href="https://amzn.to/2Log0gl">Shop Now</a>
   </div>
 </div>
 
@@ -349,7 +331,7 @@
 
 <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
-     <a target="_blank" href="https://amzn.to/2VsqS1g"><img src="https://m.media-amazon.com/images/I/81B+4phWROL._AC_UL320_.jpg" alt="Kasa Smart WiFi Plug Mini by TP-Link" /> </a>
+     <a target="_blank" href="https://amzn.to/2VsqS1g"><img src="https://m.media-amazon.com/images/I/81B+4phWROL._AC_UL320_.jpg" alt="Kasa Smart WiFi Plug Mini by TP-Link" /></a>
   </div>
   <div class="inner">
     <span class="regular"><em>28% OFF</em> + free shipping</span>
@@ -500,7 +482,7 @@
 
 <div class="card clearfix" data-tags="Deals"> 
   <div class="img_box">
-     <a target="_blank" href="https://amzn.to/2VfuDXK"><img src="https://m.media-amazon.com/images/I/61bF5yoPRGL._AC_UL436_.jpg" alt="" /> </a>
+     <a target="_blank" href="https://amzn.to/2VfuDXK"><img src="https://m.media-amazon.com/images/I/61bF5yoPRGL._AC_UL436_.jpg" alt="SanDisk 256GB Ultra MicroSDXC UHS-I Memory Card with Adapter" /></a>
   </div>
   <div class="inner">
     <span class="regular"><em>15% OFF</em> + free shipping</span>
