--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -154,7 +154,7 @@
 
 @media screen and (max-width:640px){
   .cu_wrap{margin-top:60px;}
-  .cu_wrap .detitle{margin:0 0 30px 0;}
+  .cu_wrap .detitle{margin:0 0 30px 0;color:#000;width:100%;}
   .cu_wrap .detitle h2{font-size:20px;}
   .cu_wrap .detitle p{width:100%;}
   .cu_wrap .cu_box{margin-bottom:30px;padding-bottom:30px;}
@@ -432,7 +432,7 @@
 /*End blogs_sidebar*/
 @media screen and (max-width:640px){
   .blogs{margin-top:60px;}
-  .blogs .blog_body{float:none;width:100%;margin:0;}
+  .blogs .blog_body{float:none;width:100%;margin:0;border:none;padding:0;}
   .blogs .blog_body .blog_tit h2 span{font-size:20px;}
   .blogs .blog_body .blog_tit .inner_btn a{display:block;margin-bottom:5px;text-align:center;}
   .blogs .blog_body .blog_ctn{padding:0;}
