--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -175,7 +175,7 @@
 
 @media screen and (min-width:641px) and (max-width:1199px){
   .cu_wrap{margin-top:200px;}
-  .cu_wrap .detitle{margin:0 0 50px 0;}
+  .cu_wrap .detitle{margin:0 0 50px 0;text-align:center;width:100%;}
   .cu_wrap .detitle h2{font-size:40px;}
   .cu_wrap .detitle p{width:70%;}
   .cu_wrap .cu_box{margin-bottom:50px;}
