--- a/app/views/blogs/_side_codes.html.erb
+++ b/app/views/blogs/_side_codes.html.erb
@@ -1,3 +1,16 @@
+<!-- <div class="tab-menu-box clearfix">
+  <div class="tab-menu-img">
+   <a target="_blank" href="Product_link"><img src="Product_Image" alt="Product_alt"></a>
+  </div>
+  <div class="inner">
+    <a target="_blank" href="Product_link">
+      <p>Product_Details</p>
+      <span>$Dis_price<em>$Ori_price(percentage% off)</em><span>
+    </a>
+    <address>Code: Promo_code</address>            
+  </div>
+</div> -->
+
 <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
    <a target="_blank" href="https://amzn.to/2HkvVrG"><img src="https://images-na.ssl-images-amazon.com/images/I/51piyTl26tL._SX679_.jpg" alt="Fast Wireless Charger"></a>
@@ -13,27 +26,27 @@
 
 <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2JOM6zx"><img src="https://m.media-amazon.com/images/I/61L9zTyVnqL._SR400,400_.jpg" alt="True Wireless Earphone Bluetooth" /></a>
+   <a target="_blank" href="https://amzn.to/2LHq444"><img src="https://m.media-amazon.com/images/I/71iEkoULJiL._SR400,400_.jpg" alt="Noise Cancelling Headphones Real Over Ear" /></a>
   </div>
   <div class="inner">
-    <a target="_blank" href="https://amzn.to/2JOM6zx">
-      <p>True Wireless Earphone Bluetooth</p>
-      <span>$34.39<em>$42.99(20% off)</em><span>
+    <a target="_blank" href="https://amzn.to/2LHq444">
+      <p>Noise Cancelling Headphones Real Over Ear</p>
+      <span>$31.99<em>$39.99(20% off)</em><span>
     </a>
-    <address>Code: 204BAWL1</address>            
+    <address>Code: 20UGQB5B</address>            
   </div>
 </div>
 
 <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2YrfM9K"><img src="https://m.media-amazon.com/images/I/61D3tpnDKbL._SR400,400_.jpg" alt="Qi Wireless Car Charger Mount" /></a>
+   <a target="_blank" href="https://amzn.to/2EekH6q"><img src="https://m.media-amazon.com/images/I/61KfRXyJ-8L._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
   </div>
   <div class="inner">
-    <a target="_blank" href="https://amzn.to/2YrfM9K">
-      <p>Qi Wireless Car Charger Mount</p>
-      <span>$18.47<em>$23.99(23% off)</em><span>
+    <a target="_blank" href="https://amzn.to/2EekH6q">
+      <p>ANBES Bluetooth Headphones 5.0 LED Display Mini True Bluetooth Earbuds</p>
+      <span>$39.09<em>$45.99(15% off)</em><span>
     </a>
-    <address>Code: 23H3VIEB</address>            
+    <address>Code: 158QL3AI</address>            
   </div>
 </div>
 
