--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -226,6 +226,81 @@
 
 <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2Q847cS"><img src="https://images-na.ssl-images-amazon.com/images/I/519AkRwE2pL._SX679_.jpg" alt="August Smart Lock Pro + Connect" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>6% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2Q847cS">August Smart Lock Pro + Connect, 3rd gen technology</a></p>
+    <span class="dis_price">$263.44</span><span class="org_price">$279.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2Q847cS">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2W4xP81"><img src="https://images-na.ssl-images-amazon.com/images/I/81QA5YHAE0L._SX522_.jpg" alt="SteelSeries Arctis 3 (2019 Edition) All-Platform Gaming Headset" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>16% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2W4xP81">SteelSeries Arctis 3 (2019 Edition) All-Platform Gaming Headset</a></p>
+    <span class="dis_price">$59.00</span><span class="org_price">$69.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2W4xP81">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2YvKSgu"><img src="https://images-na.ssl-images-amazon.com/images/I/61zkFTqn2%2BL._SX522_.jpg" alt="Under Armour JBL Sport Wireless Train" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2YvKSgu">Under Armour JBL Sport Wireless Train</a></p>
+    <span class="dis_price">$159.95</span><span class="org_price">$199.95</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2YvKSgu">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2JJdwGE"><img src="https://images-na.ssl-images-amazon.com/images/I/61oitxrm-vL._SX679_.jpg" alt="Wemo Mini Smart Plug" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2JJdwGE">Wemo Mini Smart Plug, WiFi Enabled, Works with Alexa, Google Assistant & Apple HomeKit</a></p>
+    <span class="dis_price">$24.98</span><span class="org_price">$34.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2JJdwGE">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2YuRVWL"><img src="https://images-na.ssl-images-amazon.com/images/I/91-T%2BsiOaOL._SX522_.jpg" alt="Fujifilm Instax Square SQ10 Hybrid Instant Camera" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>57% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2YuRVWL">Fujifilm Instax Square SQ10 Hybrid Instant Camera - Black</a></p>
+    <span class="dis_price">$119.95</span><span class="org_price">$279.00</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2YuRVWL">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
      <a target="_blank" href="https://amzn.to/2JAmdmK"><img src="https://images-na.ssl-images-amazon.com/images/I/81eqJQ1XDHL._SX522_.jpg" alt="DEWALT DWA2T40IR IMPACT READY FlexTorq Screw Driving Set" /> </a>
   </div>
   <div class="inner">
