--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -128,7 +128,7 @@
   .coupons .coupons_wrap .coupons_highlight .card{border-bottom:none;margin:0;}*/
   .coupons .coupons_wrap .card{border-bottom:1px solid #ccc;padding-bottom:10px;}
   .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:left;width:26%;height:100px;padding:1.5% 0;margin:0 1%;text-align:center;background:#fff;color:#000;}
-  .coupons .coupons_wrap .card .img_box{float: left;width: 20%;height: 167px;padding: 1.5%;}
+  .coupons .coupons_wrap .card .img_box{float:left;width:26%;height:167px;padding: 1.5%;margin:0 1%;}
   .coupons .coupons_wrap .card .img_box img{width:100%;height:100%;object-fit:contain;}
   .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#fff;display:block;background:#000;}
   .coupons .coupons_wrap .card .info_box p{font-size:70px;font-weight:bold;line-height:1.2;margin:3px 20px;}
