--- a/app/views/blogs/_side_deals.html.erb
+++ b/app/views/blogs/_side_deals.html.erb
@@ -1,59 +1,71 @@
-<div class="tab-menu-box clearfix">
+<!-- <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2JAmdmK"><img src="https://images-na.ssl-images-amazon.com/images/I/81eqJQ1XDHL._SX522_.jpg" alt="DEWALT DWA2T40IR IMPACT READY FlexTorq Screw Driving Set"></a>
+   <a target="_blank" href="Product_Link"><img src="Image_Link" alt="Image_alt"></a>
   </div>
   <div class="inner deals">
-    <a target="_blank" href="https://amzn.to/2JAmdmK">
-      <p>DEWALT DWA2T40IR IMPACT READY FlexTorq Screw Driving Set</p>
-      <span>$17.99<em>$40.00(55% off)</em><span>
+    <a target="_blank" href="Product_Link">
+      <p>Products_Title</p>
+      <span>$Dis_Price<em>$Ori_Price(Percentage% off)</em><span>
+    </a>
+  </div>
+</div> -->
+
+<div class="tab-menu-box clearfix">
+  <div class="tab-menu-img">
+   <a target="_blank" href="https://amzn.to/2Q847cS"><img src="https://images-na.ssl-images-amazon.com/images/I/519AkRwE2pL._SX679_.jpg" alt="August Smart Lock Pro + Connect" /> </a>
+  </div>
+  <div class="inner deals">
+    <a target="_blank" href="https://amzn.to/2Q847cS">
+      <p>August Smart Lock Pro + Connect</p>
+      <span>$263.44<em>$279.99(6% off)</em><span>
     </a>
   </div>
 </div>
 
 <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2VgnLVd"><img src="https://images-na.ssl-images-amazon.com/images/I/41g4Idd4y9L._SY606_.jpg" alt="Apple AirPods with Charging Case"></a>
+   <a target="_blank" href="https://amzn.to/2W4xP81"><img src="https://images-na.ssl-images-amazon.com/images/I/81QA5YHAE0L._SX522_.jpg" alt="SteelSeries Arctis 3 (2019 Edition) All-Platform Gaming Headset" /> </a>
   </div>
   <div class="inner deals">
-    <a target="_blank" href="https://amzn.to/2VgnLVd">
-      <p>Apple AirPods with Charging Case (Latest Model)</p>
-      <span>$139.99<em>$159.00(12% off)</em><span>
+    <a target="_blank" href="https://amzn.to/2W4xP81">
+      <p>SteelSeries Arctis 3 (2019 Edition) All-Platform Gaming Headset</p>
+      <span>$59.00<em>$69.99(16% off)</em><span>
     </a>
   </div>
 </div>
 
 <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2vEvKRw"><img src="https://m.media-amazon.com/images/I/61U7T1koQqL._AC_UL436_.jpg" alt="SanDisk SSD PLUS 1TB Internal SSD" /> </a>
+   <a target="_blank" href="https://amzn.to/2YvKSgu"><img src="https://images-na.ssl-images-amazon.com/images/I/61zkFTqn2%2BL._SX522_.jpg" alt="Under Armour JBL Sport Wireless Train" /> </a>
   </div>
   <div class="inner deals">
-    <a target="_blank" href="https://amzn.to/2vEvKRw">
-      <p>SanDisk SSD PLUS 1TB Internal SSD - SATA III 6 Gb/s, 2.5"/7mm - SDSSDA-1T00-G26</p>
-      <span>$107.99<em>$124.99(14% off)</em><span>
+    <a target="_blank" href="https://amzn.to/2YvKSgu">
+      <p>Under Armour JBL Sport Wireless Train</p>
+      <span>$159.95<em>$199.95(20% off)</em><span>
     </a>
   </div>
 </div>
 
 <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2VfuDXK"><img src="https://m.media-amazon.com/images/I/61bF5yoPRGL._AC_UL436_.jpg" alt="SanDisk 256GB Ultra MicroSDXC UHS-I Memory Card with Adapter" /></a>
+   <a target="_blank" href="https://amzn.to/2JJdwGE"><img src="https://images-na.ssl-images-amazon.com/images/I/61oitxrm-vL._SX679_.jpg" alt="Wemo Mini Smart Plug" /> </a>
   </div>
   <div class="inner deals">
-    <a target="_blank" href="https://amzn.to/2VfuDXK">
-      <p>SanDisk 256GB Ultra MicroSDXC UHS-I Memory Card with Adapter - 100MB/S, C10, U1, Full HD, A1, Micro SD Card</p>
-      <span>$37.99<em>$44.79(15% off)</em><span>
+    <a target="_blank" href="https://amzn.to/2JJdwGE">
+      <p>Wemo Mini Smart Plug</p>
+      <span>$24.98<em>$34.99(29% off)</em><span>
     </a>
   </div>
 </div>
 
 <div class="tab-menu-box clearfix">
   <div class="tab-menu-img">
-   <a target="_blank" href="https://amzn.to/2VsqS1g"><img src="https://m.media-amazon.com/images/I/81B+4phWROL._AC_UL320_.jpg" alt="Kasa Smart WiFi Plug Mini by TP-Link" /></a>
+   <a target="_blank" href="https://amzn.to/2YuRVWL"><img src="https://images-na.ssl-images-amazon.com/images/I/91-T%2BsiOaOL._SX522_.jpg" alt="Fujifilm Instax Square SQ10 Hybrid Instant Camera" /> </a>
   </div>
   <div class="inner deals">
-    <a target="_blank" href="https://amzn.to/2VsqS1g">
-      <p>Kasa Smart WiFi Plug Mini by TP-Link - Reliable WiFi Connection</p>
-      <span>$17.99<em>$24.99(31% off)</em><span>
+    <a target="_blank" href="https://amzn.to/2YuRVWL">
+      <p>Fujifilm Instax Square SQ10 Hybrid Instant Camera</p>
+      <span>$119.95<em>$279.00(57% off)</em><span>
     </a>
   </div>
 </div>
