--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -14,6 +14,9 @@
 
     <div class="gadgets">
       <div class="wrap">
+        <!--<%= form_for "",url: gadgets_path, role: "search", method: :get do %>
+          <%= text_field_tag :search, @search_term, placeholder: "Search..." %>
+        <% end %>-->
         <div class="card_wrap clearfix">
           <% @gadgets.each do |gadget| %>
             <div class="card with-photo">
